--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,6 +31,11 @@
       </div>
     </div>
   </div>
+  <script>
+    function handleSubmit(event) {
+      event.preventDefault();
+    }
+  </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
